--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "jsonwebtoken": "^9.0.3",
     "nodemailer": "^8.0.1",
     "ws": "^8.18.0"
+    "express-session": "^1.17.3",
+    "passport": "^0.7.0",
+    "passport-azure-ad": "^4.3.0"
   }
 }
