--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js"
   },
   "engines": {
-    "node": ">=18 <23"
+    "node": "20.x"
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
