--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "better-sqlite3": "^12.6.2",
     "cookie-parser": "^1.4.7",
     "express": "^4.19.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.3",
     "nodemailer": "^8.0.1",
-    "ws": "^8.18.0",
-    "express-session": "^1.17.3",
     "passport": "^0.7.0",
-    "passport-azure-ad": "^4.3.0"
+    "passport-azure-ad": "^4.3.0",
+    "pg": "^8.18.0",
+    "ws": "^8.18.0"
   }
 }
